fix(header): fix overflow
#10

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -27,6 +27,9 @@
   }
   &__caption {
     grid-column-start: 2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   &__arrow {
     display: inline-block;
